--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,19 @@
     width: 100%;
 }
 
-.ms_color {
-    color: red;
+.ms_active {
+    color: #fff;
+}
+
+.ms_non-active {
+    color: #aaa;
+}
+
+.ms_prev,
+.ms_next {
+    background-color: #fff;
+    padding: 0px 5px;
+    border-radius: 50%;
+    font-size: 20px;
+    margin: 0 10px;
 }
